# clipt

./: .cliptrc.ini  .hgtags  CMakeLists.txt  Doxyfile  README.md
CMakeModules/: FindGLEW.cmake  FindOpenCL.cmake
clprogs/: binarization.cl  brightness.cl  colorspaces.cl  convolution.cl  gamma.cl  histogram.cl  lut.cl  morphology.cl
doc/: ideas.txt
include/: clipt.h  clit.h  config.h  core.h  device.h  image.h  io.h  plugin.h  render.h  system.h
include/nodes/: binarization.h  colorspaces.h  convolution.h  curves.h  histogram.h  morphology.h
include/ui/: histogram.h  histogram_dialog.h  ui.h  ui_binarization.h  ui_colorspaces.h  ui_convolutions.h  ui_curves.h  ui_histogram.h  ui_morphology.h  window.h
plugins/: CMakeLists.txt
plugins/io_pnm/: CMakeLists.txt  io_pnm.c
plugins/node_histogram/: CMakeLists.txt
src/: core.c  device.c  image.c  io.c  main.c  plugin.c  render.c  system.c
src/nodes/: binarization.c  colorspaces.c  convolution.c  curves.c  histogram.c  morphology.c
src/ui/: common.c  histogram_dialog.c  ui_binarization.c  ui_colorspaces.c  ui_convolutions.c  ui_curves.c  ui_histogram.c  ui_morphology.c  window.c
ui_concepts/: morphology_dialog.glade
