CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(CLIT)
SET(CMAKE_C_FLAGS "-ggdb -fPIC -pipe")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/plugins)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CMakeModules)

ADD_DEFINITIONS("-Wall -Wextra -Wpointer-arith -Wcast-qual
  -Wno-unused-parameter -fstrict-aliasing")

FIND_PACKAGE(PkgConfig)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0)


INCLUDE_DIRECTORIES( ${GTK3_INCLUDE_DIRS} ${CLIT_SOURCE_DIR}/include)

FIND_PACKAGE(OpenGL)
INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIR} )

FIND_PACKAGE(GLEW)
INCLUDE_DIRECTORIES( ${GLEW_INCLUDE_PATH} )

FIND_PACKAGE(OpenCL)
INCLUDE_DIRECTORIES( ${OPENCL_INCLUDE_DIRS} )

ADD_SUBDIRECTORY(plugins)

ADD_EXECUTABLE(clit src/main.c src/core.c src/system.c src/render.c src/plugin.c src/ui/common.c src/ui/window.c)
TARGET_LINK_LIBRARIES(clit ${GTK3_LIBRARIES} ${GLEW_LIBRARY} ${OPENGL_LIBRARIES} ${OPENCL_LIBRARIES} )
